[package]
name = "discrete-derivative"
version = "0.1.0"
authors = ["Marco Herrera-Rendon <mherrerarendon@makemusic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"

[dev-dependencies]
float-cmp = "0.9.0"
